# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ace/ace.gni")

ohos_shared_library("avsession_napi") {
  include_dirs = [
    "include",
    "//foundation/multimedia/av_session/interfaces/innerkits/native/session/include",
    "//foundation/multimedia/av_session/frameworks/innerkitsimpl/native/session/include",
  ]

  sources = [
    "src/napi_async_callback.cpp",
    "src/napi_async_work.cpp",
    "src/napi_avcontroller_callback.cpp",
    "src/napi_avsession.cpp",
    "src/napi_avsession_callback.cpp",
    "src/napi_avsession_controller.cpp",
    "src/napi_avsession_enum.cpp",
    "src/napi_avsession_manager.cpp",
    "src/napi_control_command.cpp",
    "src/napi_meta_data.cpp",
    "src/napi_module.cpp",
    "src/napi_playback_state.cpp",
    "src/napi_session_listener.cpp",
    "src/napi_utils.cpp",
  ]

  deps = [
    "//foundation/multimedia/av_session/frameworks/innerkitsimpl/native/session:avsession_client",
    "//foundation/multimedia/av_session/utils:avsession_utils",
  ]

  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "ability_runtime:app_manager",
    "ability_runtime:napi_base_context",
    "bundle_framework:appexecfwk_base",
    "hiviewdfx_hilog_native:libhilog",
    "input:libmmi-client",
    "multimedia_image_standard:image",
    "multimedia_image_standard:image_native",
    "napi:ace_napi",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
    "utils_base:utils",
    "hitrace_native:hitrace_meter",
  ]

  relative_install_dir = "module/multimedia"

  subsystem_name = "multimedia"
  part_name = "multimedia_av_session"
}
