# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_shared_library("ability_connect_helper") {
  install_enable = true

  sources = [ "ability_connect_helper.cpp" ]

  public_deps = [ "//foundation/multimedia/av_session/utils:avsession_utils" ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:ability_manager",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "utils_base:utils",
  ]

  subsystem_name = "multimedia"
  part_name = "multimedia_av_session"
}
